@@ -1,3 +1,8 @@
+2017-02-21 S. Thiell <sthiell@stanford.edu>
+
+	* Worker/Tree.py: fix defect in file copying code when destination target
+	directory is provided (ticket #332).
+
 2016-12-20 S. Thiell <sthiell@stanford.edu>
 
 	* Version 1.7.3 released.
